# Image-generator-cli

./: .gitignore  README.md  oi  openai-image  pyproject.toml
src/nanobanana2_cli/: cli.py
