[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-image-cli"
version = "0.1.0"
description = "High-quality OpenAI image generation CLI for fast agent workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.0.0",
]

[project.scripts]
oi = "nanobanana2_cli.cli:main"
openai-image = "nanobanana2_cli.cli:main"
nanobanana2 = "nanobanana2_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
